--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ endorsed.classpath=\
 excludes=
 file.reference.caronusp-test=../caronusp/test
 file.reference.NetBeansProjects-caronusp=../caronusp
+file.reference.recaptcha4j-0.0.7.jar=lib/recaptcha4j-0.0.7.jar
 file.reference.src-java=../caronusp/src/java
 includes=**
 j2ee.compile.on.save=true
@@ -43,7 +44,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 java.source.based=true
-javac.classpath=
+javac.classpath=\
+    ${file.reference.recaptcha4j-0.0.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -71,7 +73,6 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
